ajuste na hora de cadrastar para selecionar a diciplina

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <option value="aritmetica">Aritmetica</option>
         <option value="geometria">Geometria</option>
         <option value="trigonometria">Trigonometria</option>
+        <option value="roma">roma</option>
         <!-- temas fixos temporariamente -->
 
     </select>
@@ -32,7 +33,13 @@
 
 <div id="formulario-cadastro">
     <h2>Cadastrar Nova Questão</h2>
-    <input type="text" id="ins-disciplina" placeholder="Disciplina (ex: matematica)">
+    <select type="text" id="ins-disciplina" placeholder="Disciplina (ex: matematica)">
+        <option value="matematica">Matematica</option>
+        <option value="portugues">Portugues</option>
+        <option value="historia">Historia</option>
+        <option value="geografia">Geografia</option>
+        <option value="ciencias">Ciencias</option>
+    </select>
     <input type="text" id="ins-tema" placeholder="Tema (ex: algebra)">
     <textarea id="ins-enunciado" placeholder="Digite o enunciado da questão"></textarea>
     
