correção e organização e divisao de funçoes

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
         <input type="text" id="ins-correta" placeholder="Resposta exata (ex: 3)">
         
-        <button onclick="cadastrarQuestao()">Gravar questão</button>
+        <button type="button" id="btn-salvar-questao">Cadastrar Questão</button>
     </div>
 
-    <script src="src/scipt.js"></script>
+<script type="module" src="src/script.js"></script>
 </body>
 </html>
