modularização da redação

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ input[type="color"] {
     <div class="toolbar">
         <div class="group">
             <input type="color" id="cor" value="#ffeb3b">
-            <button class="btn-destaque" onclick="destacar()">✨ Destacar e Comentar</button>
+            <button id="btnDestacar">Destacar</button>
         </div>
         
         <div class="group">
