--- a/index.html
+++ b/index.html
@@ -11,7 +11,127 @@
     * {
     box-sizing: border-box;
 }
+body { font-family: Arial, sans-serif; margin: 20px; background-color: #f4f4f4; color: #333; }
+        .container { max-width: 1200px; margin: auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+        h1, h2 { color: #0056b3; }
+        .user-card {
+            border: 1px solid #ddd;
+            padding: 15px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            background-color: #e9ecef;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            gap: 10px;
+        }
+        .user-card.blocked { background-color: #ffcccc; }
+        .user-card div { flex: 1; min-width: 150px; }
+        .user-card .status { font-weight: bold; color: green; }
+        .user-card.blocked .status { color: red; }
+        .buttons button {
+            padding: 8px 12px;
+            margin-right: 5px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 0.9em;
+        }
+        .buttons .edit { background-color: #ffc107; color: white; }
+        .buttons .delete { background-color: #dc3545; color: white; }
+        .buttons .toggle-block { background-color: #6c757d; color: white; }
+        .buttons .payment { background-color: #007bff; color: white; }
+        .buttons .progress { background-color: #28a745; color: white; }
+        .buttons .redacoes { background-color: #17a2b8; color: white; }
 
+        form {
+            background-color: #f8f9fa;
+            padding: 20px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+        }
+        form input, form select, form button {
+            padding: 10px;
+            border-radius: 4px;
+            border: 1px solid #ced4da;
+        }
+        form button {
+            grid-column: span 2;
+            background-color: #007bff;
+            color: white;
+            cursor: pointer;
+        }
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto; /* 15% from the top and centered */
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%; /* Could be more or less, depending on screen size */
+            border-radius: 8px;
+            position: relative;
+        }
+        .close-button {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .close-button:hover,
+        .close-button:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .modal-body form {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+        .modal-body form label {
+            font-weight: bold;
+        }
+        .modal-body form input, .modal-body form select {
+            width: calc(100% - 22px); /* Adjust for padding and border */
+        }
+        .payment-status-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 5px;
+            margin-top: 10px;
+        }
+        .payment-status-container span {
+            padding: 5px 10px;
+            border-radius: 3px;
+            font-size: 0.8em;
+            background-color: #f0f0f0;
+            border: 1px solid #ccc;
+        }
+        .payment-status-container span.pago { background-color: #d4edda; color: #155724; border-color: #c3e6cb; }
+        .payment-status-container span.pendente { background-color: #fff3cd; color: #856404; border-color: #ffeeba; }
+
+        .redacao-card {
+            border: 1px solid #b8daff;
+            background-color: #e0f0ff;
+            padding: 10px;
+            margin-bottom: 8px;
+            border-radius: 5px;
+        }
+        .redacao-card h4 { margin-top: 0; color: #0056b3; }
+        .redacao-card .redacao-meta { font-size: 0.85em; color: #555; }
     body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f4f6f8; padding: 20px; color: #333; }
     h1 { text-align: center; color: #1976d2; margin-bottom: 25px; }
     .container { display: flex; gap: 20px; align-items: flex-start; }
@@ -817,6 +937,84 @@ input[type="color"] {
     </div>
 </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="container">
+        <h1>Gerenciador de Alunos</h1>
+
+        <h2>Adicionar Novo Aluno</h2>
+        <form id="add-user-form">
+            <input type="text" id="add-user-name" placeholder="Nome Completo" required>
+            <input type="email" id="add-user-email" placeholder="Email (opcional)">
+            <button type="submit">Adicionar Aluno</button>
+        </form>
+
+        <h2>Lista de Alunos</h2>
+        <div id="user-list">
+            </div>
+    </div>
+
+    <div id="editUserModal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h2>Editar Aluno: <span id="editUserNameDisplay"></span></h2>
+            <div class="modal-body">
+                <form id="edit-user-form">
+                    <input type="hidden" id="edit-user-original-name">
+                    <label for="edit-user-new-name">Novo Nome:</label>
+                    <input type="text" id="edit-user-new-name">
+
+                    <label for="edit-user-email">Email:</label>
+                    <input type="email" id="edit-user-email">
+
+                    <label for="edit-user-aulas">Aulas Assistidas:</label>
+                    <input type="number" id="edit-user-aulas">
+
+                    <label for="edit-user-redacoes">Redações Feitas:</label>
+                    <input type="number" id="edit-user-redacoes">
+
+                    <label for="edit-user-progresso">Progresso do Curso (%):</label>
+                    <input type="number" id="edit-user-progresso" min="0" max="100">
+
+                    <h3>Pagamentos</h3>
+                    <div id="edit-user-payments-container">
+                        </div>
+
+                    <button type="submit">Salvar Alterações</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <div id="redacoesModal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h2>Redações de <span id="redacoesUserNameDisplay"></span></h2>
+            <div class="modal-body">
+                <form id="add-redacao-form">
+                    <input type="hidden" id="add-redacao-user-name">
+                    <label for="add-redacao-titulo">Título da Redação:</label>
+                    <input type="text" id="add-redacao-titulo" required>
+                    <label for="add-redacao-conteudo">Conteúdo da Redação (HTML):</label>
+                    <textarea id="add-redacao-conteudo" rows="5"></textarea>
+                    <button type="submit">Adicionar Redação</button>
+                </form>
+                <h3>Redações Enviadas</h3>
+                <div id="redacoes-list">
+                    </div>
+            </div>
+        </div>
+    </div>
 <script type="module" src="src/script.js"></script>
 </body>
 </html>
