adição do sistema de pagamento incomplto

--- a/index.html
+++ b/index.html
@@ -1015,6 +1015,21 @@ input[type="color"] {
             </div>
         </div>
     </div>
+
+
+
+
+    <div id="plano-container" class="plano-card">
+  <div id="pix" style="display: none;">
+  <h3>Pagamento via PIX</h3>
+  <img id="qrcode" alt="QR Code PIX" />
+  <p>Escaneie o QR Code para pagar</p>
+</div>
+
+<button onclick="iniciarPagamento()">Pagar agora</button>
+
+</div>
+
 <script type="module" src="src/script.js"></script>
 </body>
 </html>
